# Hunt-Match-Tracker

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  hunt-match-tracker.py  hunt-match-tracker.spec  requirements.txt
.github/workflows/: build-app.yml
avro/: io.gamepace.huntshowdown.match.event.key.avsc  io.gamepace.huntshowdown.match.event.value.avsc  io.gamepace.huntshowdown.match.meta.key.avsc  io.gamepace.huntshowdown.match.meta.value.avsc  io.gamepace.huntshowdown.mission.event.key.avsc  io.gamepace.huntshowdown.mission.event.value.avsc  io.gamepace.huntshowdown.player.key.avsc  io.gamepace.huntshowdown.player.meta.key.avsc  io.gamepace.huntshowdown.player.meta.value.avsc  io.gamepace.huntshowdown.player.value.avsc  io.gamepace.huntshowdown.team.key.avsc  io.gamepace.huntshowdown.team.meta.value.avsc
pyhunt/: __init__.py  core.py  helper.py  structs.py
src/: main.rs
tests/: test_helper_huntHelper.py  test_helper_steamHelper.py
