[package]
name = "hunt-match-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
log = "0.4.17"
env_logger = "0.10"

# Hunt & Steam
steamlocate = "0.*"

# XML
xml-rs = "0.8.4"
quick-xml = "0.27.1"
